name: euler
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    1000digit.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable euler
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any
  default-language: Haskell2010
  other-modules:
      P005
      P001
      P003
      P002
      P006
      P007
      P008
      P004
